--- a/Fractal1/Fractal1/Site.Master
+++ b/Fractal1/Fractal1/Site.Master
@@ -50,7 +50,11 @@
                     <a class="navbar-brand" runat="server" href="~/">Fun and Fractals</a>
                 </div>
                 <div class="navbar-collapse collapse">
-                   
+                    <ul class="nav navbar-nav">
+                        <li><a runat="server" href="~/">Home</a></li>
+                        <li><a runat="server" href="~/GraphicDashBoard">About Graphics</a></li>
+                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
